Fixed some site spacing

--- a/app/assets/stylesheets/_site-layout.scss
+++ b/app/assets/stylesheets/_site-layout.scss
@@ -50,7 +50,10 @@
   .top-row {
     @extend %header-text;
     font-size: 14px;
-    padding: 30px;
+    padding-top: 30px;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-bottom: 20px;
     text-align: center;
     position: relative;
 
@@ -98,11 +101,10 @@
 
       @include media($break-medium) {
         position: static;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
       }
 
       @include media($break-small)  {
-        padding-bottom: 30px;
         position: static;
 
         li  {
