--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -158,6 +158,8 @@
 
   .services {
     @include row;
+    padding-left: 10px;
+    padding-right: 10px;
 
     .service-container {
       @include span-columns(3);
@@ -208,16 +210,11 @@
 
   .have-a-project-in-mind {
     @extend %contact-section;
-      text-align: center;
-      padding-left: 25px;
-      padding-right: 25px;
-      padding-top: 30px;
-      padding-bottom: 30px;
-
-    @include media($break-small)  {
-      font-size: 16px;
-
-    }
+    text-align: center;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   .featured-projects{
@@ -408,10 +405,7 @@
 
       .logo-wrap {
         display: block;
-        padding-top: 16px;
-        padding-bottom: 16px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 50px;
       }
     }
   }
@@ -425,7 +419,7 @@
     padding-bottom: 40px;
 
     @include media($break-small)  {
-      font-size: 16px;
+      font-size: 14px;
     }
 
     .contact-link{
@@ -435,6 +429,8 @@
       @include media($break-small)  {
         display: block;
         font-size: 22px;
+        padding-left: 0px;
+        padding-right: 0px;
       }
     }
   }
